# tns_embedded_training

./: .gitignore  CMakeLists.txt  README.md  Start.md  setup.sh
Baremetal/: CMakeLists.txt  README.md  STM32F446ZETX_FLASH.ld  STM32F446ZETX_RAM.ld
Baremetal/Core/Inc/: ButtonWrapper.hpp  GpioWrapper.hpp  TI_M74Wrapper.hpp  main.h  stm32f4xx_it.h
Baremetal/Core/Src/: main.cpp  stm32f4xx_it.c
Baremetal/renode/: board.repl  setup.resc
Baremetal/test/: demo-button.robot
Base/: CMakeLists.txt  README.md
Base/Baremetal/renode/: board.repl  test.resc
Base/Baremetal/test/: demo-button.robot
Base/FreeRTOS/: CMakeLists.txt
Base/FreeRTOS/renode/: test.resc
Core/Src/: main.c  stm32f4xx_hal_msp.c
Docs/: DocRenodeRobotFramework.md  Flash_and_debug.md  c++_configuration.md  debug_with_uart.md  how_to_build.md  renode_basic_tutorial.md  rust_configuration.md  use_ozone.md  use_renode_robotframework.md
Exercise_LED/Baremetal/: CMakeLists.txt
Exercise_LED/FreeRTOS/: CMakeLists.txt
Exercise_LED/FreeRTOS/Core/Src/: main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Exercise_LED/FreeRTOS/renode/: setup.resc  test.resc
Exercise_LED/Middlewares/: CMakeLists.txt
Exercise_SPI/Baremetal/: CMakeLists.txt
Exercise_SPI/FreeRTOS/: CMakeLists.txt
Exercises/: CMakeLists.txt
Exercises/1_Exercise_GPIO/: CMakeLists.txt  ReadME.md
Exercises/2_Exercise_Sensor/: CMakeLists.txt  ReadME.md
Exercises/3_Exercise_FreeRTOS/: CMakeLists.txt  ReadME.md  build.sh
Exercises/4_Exercise_LinkerScript/: CMakeLists.txt  ReadME.md  STM32F401RETX_FLASH.ld  build.sh  setup.sh
Exercises/Exercise_GPIO/: CMakeLists.txt  ReadME.md
Exercises/Exercise_LinkerScript/: CMakeLists.txt  STM32F401RETX_FLASH.ld
Exercises/Exercise_SPI/: CMakeLists.txt
Exercises/Exercise_SPI/Core/Inc/: main.h
Exercises/Middlewares/: CMakeLists.txt
Exercises_C++/: CMakeLists.txt  ReadME.md
Exercises_C++/0_HelloWorld/: CMakeLists.txt  ReadME.md  build.sh
Exercises_C++/0_HelloWorld/Core/Src/: main.cpp
Exercises_C++/1_GPIO/: CMakeLists.txt  ReadME.md  build.sh
Exercises_C++/1_GPIO/Core/Example/: example_7segment.cpp  example_interrupt.cpp  example_led_dimmer.cpp  example_pwm.cpp  example_simple_button.cpp
Exercises_C++/1_GPIO/Core/Src/: main.cpp
Exercises_C++/1_GPIO/Core/StmFiles/: stm32f4xx_hal_msp.c
Exercises_C++/2_Sensor/: CMakeLists.txt  ReadME.md  build.sh
Exercises_C++/2_Sensor/Core/Example/: TI_M74Wrapper.hpp  example_i2c_reading.cpp  example_spi_reading.cpp
Exercises_C++/2_Sensor/Core/Src/: main.cpp
Exercises_C++/3_FreeRTOS/: CMakeLists.txt  ReadME.md
Exercises_C++/3_FreeRTOS/Core/Example/: example_simples_tasks.cpp
Exercises_C++/3_FreeRTOS/Core/Inc/: main.h
Exercises_C++/3_FreeRTOS/Core/Src/: main.cpp
Exercises_C++/3_FreeRTOS/Core/StmFiles/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
Exercises_C++/4_LinkerScript/: ReadME.md
Exercises_C++/4_LinkerScript/Core/Src/: main.cpp
Exercises_C++/4_LinkerScript/Drivers/: CMakeLists.txt
Exercises_C++/5_Debug/: CMakeLists.txt  ReadME.md
Exercises_C++/5_Debug/Core/Src/: main.cpp
Exercises_C++/5_Debug_TODO/: ReadME.md  STM32F401RETX_FLASH.ld  build.sh
Exercises_C++/5_Debug_TODO/Core/Src/: main.cpp
Exercises_C++/6_ADC/: CMakeLists.txt  ReadME.md  build.sh
Exercises_C++/6_ADC/Core/Src/: main.cpp
Exercises_C++/6_ADC/Core/example/: example_potentiometer_servomoter.c  example_potentiometer_servomotor.c
Exercises_C++/Global_libraries/Middlewares/: CMakeLists.txt
Exercises_Rust/: ReadME.md
Exercises_Rust/0_HelloWorld/: ReadME.md
Exercises_Rust/1_Exercise_GPIO/: ReadME.md
Exercises_Rust/1_GPIO/: Cargo.toml  ReadME.md
Exercises_Rust/2_Exercise_Sensor/: Cargo.toml
Exercises_Rust/2_Exercise_UART/: Cargo.toml
Exercises_Rust/2_Sensor/: Cargo.toml  ReadME.md
Exercises_Rust/3_Exercise_LinkerScript/: ReadME.md  memory.x
Exercises_Rust/3_LinkerScript/: Cargo.toml  ReadME.md
Exercises_Rust/3_LinkerScript/examples/: memory_reading.rs
Exercises_Rust/3_LinkerScript/src/: main.rs
Exercises_Rust/4_C_in_Rust/: ReadMe.md
Exercises_Rust/4_C_in_Rust/rust_project/: Cargo.toml
Exercises_Rust/4_C_in_Rust/rust_project/cheaders/: gpio.h  stm32f4xx.h
Exercises_Rust/4_C_in_Rust/rust_project/src/: main.rs
Exercises_Rust/4_Embassy_TODO/: Cargo.toml
Exercises_Rust/4_Embassy_TODO/.cargo/: config
Exercises_Rust/4_Embassy_TODO/src/: main.rs
Exercises_Rust/4_RTIC_TODO/: memory.x
Exercises_Rust/5_RTIC/: ReadME.md
Exercises_Rust/6_ADC/: Cargo.toml  ReadME.md
Exercises_Rust/6_ADC/.cargo/: config
Exercises_Rust/6_ADC/examples/: adc_reading.rs  potentiometer_pwm.rs
Exercises_Rust/6_ADC/src/: main.rs
Exercises_Rust/Embassy_TODO/: Cargo.toml  ReadME.md
Exercises_Rust/Embassy_TODO/.cargo/: config
Exercises_Rust/Embassy_TODO/examples/: embassy_blink_period.rs  embassy_button_exti.rs  embassy_pwm.rs
Exercises_Rust/Embassy_TODO/src/: main.rs
Exercises_Rust/RTIC_TODO/: Cargo.toml  ReadME.md
Exercises_Rust/RTIC_TODO/examples/: blinky.rs
Exercises_Rust/RTIC_TODO/src/: main.rs
FreeRTOS/: CMakeLists.txt
FreeRTOS/Core/Inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
FreeRTOS/Core/Src/: main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
Middlewares/: CMakeLists.txt
RenodeConfig/: board.repl
RobotFrameworkTests/: ReadME.md
RobotFrameworkTests/0_Tests_HelloWorld_C++/: Question.robot
RobotFrameworkTests/1_Tests_GPIO/: Question1.robot  Question2.robot  Question3-4.robot  Question3.robot
RobotFrameworkTests/1_Tests_GPIO_C++/: Question2.robot  Question3-4.robot
RobotFrameworkTests/1_Tests_GPIO_Rust/: Question1.robot  Question2.robot  Question3-4.robot
RobotFrameworkTests/2_Tests_Sensor/: Question1-2.robot
RobotFrameworkTests/2_Tests_Sensor_Rust/: Question1-2.robot
RobotFrameworkTests/3_Tests_FreeRTOS/: Question1-2.robot  Question3.robot
RobotFrameworkTests/3_Tests_FreeRTOS_C++/: Question1-2.robot
RobotFrameworkTests/3_Tests_LinkerScript_Rust/: Question1.robot
RobotFrameworkTests/4_Tests_LinkerScript/: Question1.robot
docs/: renode_basic_tutorial.md
renode/: setup.resc
(+68 files in other folders)
