[package]
authors = ["apollolabsdev <104051566+apollolabsdev@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
name = "stm32f4xxgpio-embassy"
version = "0.1.0"

[dependencies]
embassy-sync = { version = "0.2.0"}
embassy-executor = { version = "0.2.0"}
embassy-time = { version = "0.1.0"}
embassy-stm32 = { version = "0.0.0"}
# defmt = "0.3"
# defmt-rtt = "0.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.3.1"
# panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = "1.0"


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations