[package]
name = "rtic"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.0.0"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.stm32f4xx-hal]
version = "^0.16.0"
features = ["rt", "stm32f401"] # replace the model of your microcontroller here

